[tool.poetry]
name = "mbausp"
version = "0.1.0"
description = ""
authors = ["ferppai"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
jupyterlab = {extras = ["qtpdf"], version = "^4.0.0"}
scipy = "^1.10.1"
tabulate = "^0.9.0"
seaborn = "^0.12.2"
nbconvert = {extras = ["qtpdf"], version = "^7.4.0"}
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
