[tool.poetry]
name = "mbausp"
version = "0.1.0"
description = ""
authors = ["ferppai"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.7.1"
jupyterlab = {extras = ["qtpdf"], version = "^4.0.0"}
scipy = "^1.10.1"
tabulate = "^0.9.0"
seaborn = "^0.12.2"
nbconvert = {extras = ["qtpdf"], version = "^7.4.0"}
openpyxl = "^3.1.2"
scikit-learn = "^1.2.2"
pytorch-lightning = "^2.0.2"
tensorflow = "^2.12.0"
torch = "1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
