[tool.poetry]
name = "mbausp"
version = "0.1.0"
description = ""
authors = ["ferppai"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.7.1"
jupyterlab = {extras = ["qtpdf"], version = "^4.0.0"}
scipy = "^1.10.1"
tabulate = "^0.9.0"
seaborn = "^0.12.2"
nbconvert = {extras = ["qtpdf"], version = "^7.4.0"}
openpyxl = "^3.1.2"
scikit-learn = "^1.2.2"
phaseportrait = "^1.2.2"
statsmodels = "^0.14.0"
pmdarima = "^2.0.3"
yfinance = "^0.2.26"
aleatory = "^0.1.2"
sympy = "^1.12"
nashpy = "^0.0.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
